@@ -2,14 +2,12 @@ package com.pennant.pff.mandate.service.impl;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.transaction.TransactionDefinition;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import com.cronutils.utils.StringUtils;
 import com.pennant.app.util.SysParamUtil;
@@ -22,109 +20,100 @@ import com.pennant.pff.excess.MandateUploadError;
 import com.pennant.pff.mandate.InstrumentType;
 import com.pennant.pff.upload.model.FileUploadHeader;
 import com.pennant.pff.upload.service.impl.AUploadServiceImpl;
-import com.pennanttech.dataengine.ValidateRecord;
+import com.pennanttech.dataengine.model.DataEngineAttributes;
 import com.pennanttech.pennapps.core.AppException;
 import com.pennanttech.pennapps.core.model.ErrorDetail;
 import com.pennanttech.pennapps.core.resource.Literal;
 import com.pennanttech.pff.core.RequestSource;
+import com.pennanttech.pff.file.UploadTypes;
+import com.pennapps.core.util.ObjectUtil;
 
-public class MandateUploadServiceImpl extends AUploadServiceImpl {
+public class MandateUploadServiceImpl extends AUploadServiceImpl<MandateUpload> {
 	private static final Logger logger = LogManager.getLogger(MandateUploadServiceImpl.class);
 
 	private MandateUploadDAO mandateUploadDAO;
 	private MandateService mandateService;
-	private ValidateRecord mandateUploadValidateRecord;
+
+	public MandateUploadServiceImpl() {
+		super();
+	}
+
+	@Override
+	protected MandateUpload getDetail(Object object) {
+		if (object instanceof MandateUpload detail) {
+			return detail;
+		}
+
+		throw new AppException(IN_VALID_OBJECT);
+	}
+
+	private void process(MandateUpload detail, Mandate mandate) {
+		TransactionStatus txStatus = getTransactionStatus();
+
+		try {
+			Mandate response = mandateService.createMandates(mandate);
+
+			if (response == null) {
+				setFailureStatus(detail, "Mandate is null");
+				return;
+			}
+
+			ErrorDetail error = response.getError();
+			if (error != null) {
+				setFailureStatus(detail, error);
+				return;
+			}
+
+			setSuccesStatus(detail);
+			detail.setReferenceID(response.getMandateID());
+
+			transactionManager.commit(txStatus);
+		} catch (Exception e) {
+			if (txStatus != null) {
+				transactionManager.rollback(txStatus);
+			}
+			setFailureStatus(detail, e.getMessage());
+		}
+	}
 
 	@Override
 	public void doApprove(List<FileUploadHeader> headers) {
 		logger.debug(Literal.ENTERING);
 
 		new Thread(() -> {
-
-			DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-					TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-			TransactionStatus txStatus = null;
-
 			Date appDate = SysParamUtil.getAppDate();
 
 			for (FileUploadHeader header : headers) {
 				List<MandateUpload> details = mandateUploadDAO.loadRecordData(header.getId());
-
+				header.getUploadDetails().addAll(details);
 				header.setAppDate(appDate);
-				header.setTotalRecords(details.size());
-				int sucessRecords = 0;
-				int failRecords = 0;
 
 				try {
-					txStatus = transactionManager.getTransaction(txDef);
-
 					for (MandateUpload detail : details) {
 						doValidate(header, detail);
+						prepareUserDetails(header, detail);
 
 						if (EodConstants.PROGRESS_FAILED == detail.getProgress()) {
-							failRecords++;
 							continue;
 						}
-						Mandate mandate = detail.getMandate();
-						mandate.setUserDetails(header.getUserDetails());
-						mandate.setSourceId(RequestSource.UPLOAD.name());
-						Mandate response = mandateService.createMandates(mandate);
 
-						ErrorDetail error = response.getError();
-						if (error != null) {
-							failRecords++;
-							detail.setProgress(EodConstants.PROGRESS_FAILED);
-							detail.setErrorCode(error.getCode());
-							detail.setErrorDesc(error.getError());
-						} else {
-							sucessRecords++;
-							detail.setProgress(EodConstants.PROGRESS_SUCCESS);
-							detail.setErrorCode("");
-							detail.setErrorDesc("");
-							detail.setReferenceID(response.getMandateID());
-						}
+						Mandate mandate = detail.getMandate();
+						mandate.setUserDetails(detail.getUserDetails());
+						mandate.setSourceId(RequestSource.UPLOAD.name());
+
+						process(detail, mandate);
 					}
 
 					mandateUploadDAO.update(details);
-					transactionManager.commit(txStatus);
 				} catch (Exception e) {
-					logger.error(ERROR_LOG, e.getCause(), e.getMessage(), e.getLocalizedMessage(), e);
-
-					if (txStatus != null) {
-						transactionManager.rollback(txStatus);
-					}
-				} finally {
-					txStatus = null;
+					logger.error(Literal.EXCEPTION, e);
 				}
-
-				header.setSuccessRecords(sucessRecords);
-				header.setFailureRecords(failRecords);
-
-				StringBuilder remarks = new StringBuilder("Process Completed");
-
-				if (failRecords > 0) {
-					remarks.append(" with exceptions, ");
-				}
-
-				remarks.append(" Total Records : ").append(header.getTotalRecords());
-				remarks.append(" Success Records : ").append(sucessRecords);
-				remarks.append(" Failed Records : ").append(failRecords);
 			}
 
 			try {
-				txStatus = transactionManager.getTransaction(txDef);
-
 				updateHeader(headers, true);
-
-				transactionManager.commit(txStatus);
 			} catch (Exception e) {
-				logger.error(ERROR_LOG, e.getCause(), e.getMessage(), e.getLocalizedMessage(), e);
-
-				if (txStatus != null) {
-					transactionManager.rollback(txStatus);
-				}
-			} finally {
-				txStatus = null;
+				logger.error(Literal.EXCEPTION, e);
 			}
 
 		}).start();
@@ -134,22 +123,23 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doReject(List<FileUploadHeader> headers) {
-		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).collect(Collectors.toList());
+		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).toList();
 
-		DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-				TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-		TransactionStatus txStatus = null;
+		TransactionStatus txStatus = getTransactionStatus();
 		try {
-			txStatus = transactionManager.getTransaction(txDef);
 
-			mandateUploadDAO.update(headerIdList, ERR_CODE, ERR_DESC, EodConstants.PROGRESS_FAILED);
+			headers.forEach(h1 -> {
+				h1.setRemarks(REJECT_DESC);
+				h1.getUploadDetails().addAll(mandateUploadDAO.loadRecordData(h1.getId()));
+			});
 
-			headers.forEach(h1 -> h1.setRemarks(ERR_DESC));
+			mandateUploadDAO.update(headerIdList, REJECT_CODE, REJECT_DESC);
+
 			updateHeader(headers, false);
 
 			transactionManager.commit(txStatus);
 		} catch (Exception e) {
-			logger.error(ERROR_LOG, e.getCause(), e.getMessage(), e.getLocalizedMessage(), e);
+			logger.error(Literal.EXCEPTION, e);
 
 			if (txStatus != null) {
 				transactionManager.rollback(txStatus);
@@ -159,16 +149,7 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doValidate(FileUploadHeader header, Object detail) {
-
-		MandateUpload mu = null;
-
-		if (detail instanceof MandateUpload) {
-			mu = (MandateUpload) detail;
-		}
-
-		if (mu == null) {
-			throw new AppException("Invalid Data transferred...");
-		}
+		MandateUpload mu = getDetail(detail);
 
 		Mandate mandate = mu.getMandate();
 
@@ -193,30 +174,24 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 		InstrumentType instrumentType = InstrumentType.getType(mandateType);
 
 		switch (instrumentType) {
-		case ECS:
-		case DD:
-		case NACH:
-		case EMANDATE:
-
+		case ECS, DD, NACH, EMANDATE:
 			externalMandateRequired(mu, mandate, extMndt);
-
 			swapMandateRequired(mu, mandate, swapMndt);
-
 			openMandateRequired(mu, mandate, openMndt);
-
 			securityMandateRequired(mu, mandate, secMndt);
 
 			break;
 
-		case SI:
-		case DAS:
+		case SI, DAS:
 			swapMandateRequired(mu, mandate, swapMndt);
 			break;
-
 		default:
 			break;
 		}
 
+		if (mu.getProgress() != EodConstants.PROGRESS_FAILED) {
+			setSuccesStatus(mu);
+		}
 	}
 
 	private void openMandateRequired(MandateUpload mu, Mandate mandate, String openMndt) {
@@ -277,9 +252,12 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	private void setError(MandateUpload detail, MandateUploadError error) {
-		detail.setProgress(EodConstants.PROGRESS_FAILED);
-		detail.setErrorCode(error.name());
-		detail.setErrorDesc(error.description());
+		setFailureStatus(detail, error.name(), error.description());
+	}
+
+	@Override
+	public void uploadProcess() {
+		uploadProcess(UploadTypes.MANDATES.name(), this, "MandateUploadHeader");
 	}
 
 	@Override
@@ -288,8 +266,58 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Override
-	public ValidateRecord getValidateRecord() {
-		return mandateUploadValidateRecord;
+	public void validate(DataEngineAttributes attributes, MapSqlParameterSource paramSource) throws Exception {
+		logger.debug(Literal.ENTERING);
+
+		Long headerID = ObjectUtil.valueAsLong(attributes.getParameterMap().get("HEADER_ID"));
+
+		if (headerID == null) {
+			return;
+		}
+
+		FileUploadHeader header = (FileUploadHeader) attributes.getParameterMap().get("FILE_UPLOAD_HEADER");
+
+		MandateUpload detail = new MandateUpload();
+
+		detail.setReference(ObjectUtil.valueAsString(paramSource.getValue("orgReference")));
+
+		Mandate mndts = new Mandate();
+
+		mndts.setCustCIF(ObjectUtil.valueAsString(paramSource.getValue("custCIF")));
+		mndts.setMandateRef(ObjectUtil.valueAsString(paramSource.getValue("mandateRef")));
+		mndts.setMandateType(ObjectUtil.valueAsString(paramSource.getValue("mandateType")));
+		mndts.setAccNumber(ObjectUtil.valueAsString(paramSource.getValue("accNumber")));
+		mndts.setAccHolderName(ObjectUtil.valueAsString(paramSource.getValue("accHolderName")));
+		mndts.setJointAccHolderName(ObjectUtil.valueAsString(paramSource.getValue("jointAccHolderName")));
+		mndts.setAccType(ObjectUtil.valueAsString(paramSource.getValue("accType")));
+		mndts.setStrOpenMandate(ObjectUtil.valueAsString(paramSource.getValue("openMandate")));
+		mndts.setStartDate(ObjectUtil.valueAsDate(paramSource.getValue("startDate")));
+		mndts.setExpiryDate(ObjectUtil.valueAsDate(paramSource.getValue("expiryDate")));
+		mndts.setMaxLimit(ObjectUtil.valueAsBigDecimal(paramSource.getValue("maxLimit")));
+		mndts.setPeriodicity(ObjectUtil.valueAsString(paramSource.getValue("periodicity")));
+		mndts.setStatus(ObjectUtil.valueAsString(paramSource.getValue("mandateStatus")));
+		mndts.setReason(ObjectUtil.valueAsString(paramSource.getValue("reason")));
+		mndts.setStrSwapIsActive(ObjectUtil.valueAsString(paramSource.getValue("swapIsActive")));
+		mndts.setEntityCode(ObjectUtil.valueAsString(paramSource.getValue("entityCode")));
+		mndts.setPartnerBankId(ObjectUtil.valueAsLong(paramSource.getValue("partnerBankId")));
+		mndts.seteMandateSource(ObjectUtil.valueAsString(paramSource.getValue("eMandateSource")));
+		mndts.seteMandateReferenceNo(ObjectUtil.valueAsString(paramSource.getValue("eMandateReferenceNo")));
+		mndts.setSwapEffectiveDate(ObjectUtil.valueAsDate(paramSource.getValue("swapEffectiveDate")));
+		mndts.setEmployerID(ObjectUtil.valueAsLong(paramSource.getValue("employerID")));
+		mndts.setEmployeeNo(ObjectUtil.valueAsString(paramSource.getValue("employeeNo")));
+		mndts.setIFSC(ObjectUtil.valueAsString(paramSource.getValue("iFSC")));
+		mndts.setMICR(ObjectUtil.valueAsString(paramSource.getValue("mICR")));
+		mndts.setStrExternalMandate(ObjectUtil.valueAsString(paramSource.getValue("externalMandate")));
+		mndts.setStrSecurityMandate(ObjectUtil.valueAsString(paramSource.getValue("securityMandate")));
+		detail.setMandate(mndts);
+
+		doValidate(header, detail);
+
+		updateProcess(header, detail, paramSource);
+
+		header.getUploadDetails().add(detail);
+
+		logger.debug(Literal.LEAVING);
 	}
 
 	@Autowired
@@ -300,11 +328,6 @@ public class MandateUploadServiceImpl extends AUploadServiceImpl {
 	@Autowired
 	public void setMandateService(MandateService mandateService) {
 		this.mandateService = mandateService;
-	}
-
-	@Autowired
-	public void setMandateUploadValidateRecord(MandateUploadValidateRecord mandateUploadValidateRecord) {
-		this.mandateUploadValidateRecord = mandateUploadValidateRecord;
 	}
 
 }
